added santa claus

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
             <img src="images/balloons-bow-red.png" alt="balloons">
             <img src="images/balloons-bow-red.png" alt="balloons">
         </div>
+        <div class="santa-claus">
+            <img src="images/santa-claus.jpg" alt="ded">
+        </div>
     </header>
     <section class="bg-1">
         <div class="bg-wrapper">
