--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
         $(window).on('load', function () {
             $('.preloader_content').delay(500).fadeToggle(500);
         });
-</script>    
+</script>
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
 <script src="js/script.js"></script>
 </body>
 </html>
